apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: apps
spec:
  selector:
    app: homepage
  ports:
    - port: 3000 # The port the pod is listening on
      targetPort: 3000 # Maps to container port
  type: ClusterIP # Exposes the service on a cluster-internal IP
